fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -423,11 +423,9 @@ body {
   .banner__top {
     text-align: left; }
     .banner__top h2 {
-      font-size: 2.8rem;
-      font-weight: bold; }
-  .banner__img {
-    height: auto;
-    width: 90%; }
+      font-size: 2.9rem;
+      font-weight: bold;
+      line-height: 1.2; }
   .banner__container {
     padding-left: 8rem;
     padding-right: 3rem;
@@ -442,9 +440,13 @@ body {
     flex-direction: row; }
     .banner__iconImages img {
       margin-right: 20px; }
-  .banner__large-img {
+  .banner__img {
+    height: auto;
     width: 100%;
     object-fit: cover; }
+  .banner__large-img {
+    float: right;
+    width: 100%; }
   .banner__goToCatalog {
     padding: 10px 22px;
     margin-bottom: 30px;
@@ -452,7 +454,8 @@ body {
     border: 1px solid;
     display: flex;
     justify-content: space-between;
-    align-items: center; }
+    align-items: center;
+    cursor: pointer; }
     .banner__goToCatalog .arow {
       color: #6A1B9A;
       font-weight: bold; }
@@ -469,6 +472,8 @@ body {
     background-color: #f9f0ff; }
     .banner__top {
       text-align: center; }
+      .banner__top h2 {
+        font-size: 2rem; }
     .banner__img {
       height: 380px;
       width: 100%; }
@@ -577,69 +582,6 @@ body {
     @media (max-width: 750px) {
       .process__content {
         flex-direction: column; } }
-
-.footer {
-  background-color: #EFEFEF;
-  position: relative;
-  overflow-y: hidden !important; }
-  .footer::before {
-    z-index: 1;
-    content: "";
-    background: #f9f0ff;
-    width: 110%;
-    height: 204px;
-    display: block;
-    position: absolute;
-    top: -22%;
-    left: -73px;
-    border-radius: 50%; }
-  .footer__container {
-    width: 88%;
-    position: relative;
-    margin: auto;
-    display: flex;
-    justify-content: center; }
-  .footer__menu {
-    display: flex; }
-  .footer__col {
-    padding: 0.8rem 0.8rem 0;
-    padding-top: 10rem; }
-    .footer__col--1 {
-      width: 26%; }
-    .footer__col--3 {
-      width: 34%;
-      padding-top: 0; }
-  .footer__copy-right {
-    position: absolute;
-    right: -90px;
-    top: 55%;
-    transform: rotate(270deg);
-    color: #69727B;
-    font-size: 0.7rem;
-    letter-spacing: 1px; }
-
-@media only screen and (max-width: 790px) {
-  .footer {
-    width: 100%; }
-    .footer::before {
-      display: none; }
-    .footer__container {
-      flex-direction: column;
-      width: 98%; }
-    .footer__col {
-      width: 100%; }
-      .footer__col--2 {
-        padding-top: 3rem; }
-    .footer__copy-right {
-      all: unset;
-      color: #69727B;
-      font-size: 0.7rem;
-      letter-spacing: 1px;
-      margin-left: 2%; } }
-
-@media only screen and (max-width: 1000px) {
-  .footer__copy-right {
-    right: -120px; } }
 
 .problem {
   margin-top: 60px;
@@ -791,3 +733,67 @@ body {
       margin-bottom: 25px; }
   .category__button {
     width: 100%; } }
+
+.footer {
+  background-color: #EFEFEF;
+  position: relative;
+  overflow: hidden;
+  width: 100%; }
+  .footer::before {
+    z-index: 1;
+    content: "";
+    background: #f9f0ff;
+    width: 110%;
+    height: 204px;
+    display: block;
+    position: absolute;
+    top: -22%;
+    left: -73px;
+    border-radius: 50%; }
+  .footer__container {
+    width: 88%;
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: center; }
+  .footer__menu {
+    display: flex; }
+  .footer__col {
+    padding: 0.8rem 0.8rem 0;
+    padding-top: 10rem; }
+    .footer__col--1 {
+      width: 26%; }
+    .footer__col--3 {
+      width: 34%;
+      padding-top: 0; }
+  .footer__copy-right {
+    position: absolute;
+    right: -90px;
+    top: 55%;
+    transform: rotate(270deg);
+    color: #69727B;
+    font-size: 0.7rem;
+    letter-spacing: 1px; }
+
+@media only screen and (max-width: 790px) {
+  .footer {
+    width: 100%; }
+    .footer::before {
+      display: none; }
+    .footer__container {
+      flex-direction: column;
+      width: 98%; }
+    .footer__col {
+      width: 100%; }
+      .footer__col--2 {
+        padding-top: 3rem; }
+    .footer__copy-right {
+      all: unset;
+      color: #69727B;
+      font-size: 0.7rem;
+      letter-spacing: 1px;
+      margin-left: 2%; } }
+
+@media only screen and (max-width: 1000px) {
+  .footer__copy-right {
+    right: -120px; } }
