--- a/sass/layouts/_banner.scss
+++ b/sass/layouts/_banner.scss
@@ -7,16 +7,14 @@
     &__top  {
          text-align: left;
          h2 {
-             font-size: 2.8rem;
+             font-size: 2.9rem;
              font-weight: bold;
+             line-height: 1.2;
 
          }
     }
 
-    &__img {
-        height: auto;
-        width: 90%;
-    }
+   
     &__container {
         padding-left: 8rem;
         padding-right: 3rem;
@@ -35,10 +33,15 @@
                 margin-right: 20px;
             }
     }
-    &__large-img {
-        // filter: hue-rotate(-109deg);
+     &__img {
+        height: auto;
         width: 100%;
         object-fit: cover;
+    }
+    &__large-img {
+        // filter: hue-rotate(-109deg);
+        float: right;
+        width: 100%;
     }
 
     &__goToCatalog {
@@ -50,10 +53,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-    .arow {
-        color: $color-primary;
-        font-weight: bold;
-    }
+        cursor: pointer;
+        .arow {
+            color: $color-primary;
+            font-weight: bold;
+        }
     &__p {
         color: $color-gray-light;
     }   
@@ -72,6 +76,9 @@
         background-color: $color-primary-light;
         &__top  {
             text-align: center;
+            h2 {
+                font-size: 2rem;
+            }
         }
 
         &__img {
